edited team member bios, added styled logos to bios, added responsive styles to form fields on contact us page

--- a/about.html
+++ b/about.html
@@ -64,10 +64,7 @@
                                 width="200px" alt="Lexie Jiang">
                             <figcaption>Lexie Jiang<br>Project Lead<figcaption>
                         </figure>
-                        <p>After pursuing a degree in Business and Literature, I worked as a marketing specialist in the
-                            tech world. During that time, I used website templates that didn't allow for much unique
-                            functionality. I discovered a passion for building websites and switched my career path to
-                            attack more creative and innovative tasks that come with full stack development. </p>
+                        <p>Lexie functions as the Full Stack Project Lead for <span class="in-text-logo" style="white-space: nowrap;"><img src="assets/up-24.png" class="in-text" alt="logo up arrow">upGrade</span><span class="in-text-logo"> Tutors</span>. She manages our cross-functional team providing leadership, support, and encouragement. She's friendly and kind but is fierce at heart - claiming a Black Mamba as her spirit animal.</p>
                         <div class='social-icons'>
                             <a href="https://github.com/jiangeyre" target="_blank"><img
                                     src="assets/GitHub-Mark-32px.png"></a>
@@ -81,8 +78,7 @@
                                 width="200px" alt="Nathan Griffith">
                             <figcaption>Nathan Griffith<br>Front End Developer<figcaption>
                         </figure>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis optio doloremque ex cumque et quod inventore sint 
-                            impedit voluptatibus voluptatem laudantium aut, quasi, sit eveniet sed? Exercitationem aperiam impedit nisi.</p>
+                        <p>Nathan functions as a Front End Developer for <span class="in-text-logo" style="white-space: nowrap;"><img src="assets/up-24.png" class="in-text" alt="logo up arrow">upGrade</span><span class="in-text-logo"> Tutors</span>. In his role he created functional validated form components with React and used events to add dynamic functionality.</p>
                         <div class='social-icons'>
                             <a href="https://github.com/ngriffith29" target="_blank"><img
                                     src="assets/GitHub-Mark-32px.png"></a>
@@ -95,10 +91,7 @@
                                 width="200px" alt="Ariana Habas">
                             <figcaption>Ariana Habas<br>Front End Developer<figcaption>
                         </figure>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, ratione ut a minima nemo
-                            odit
-                            natus quas vel minus modi assumenda quis, omnis quos aut eius aliquam quibusdam consequuntur
-                            beatae.</p>
+                        <p>Ari functions as a Front End Framework Developer at <span class="in-text-logo" style="white-space: nowrap;"><img src="assets/up-24.png" class="in-text" alt="logo up arrow">upGrade</span><span class="in-text-logo"> Tutors</span>. She and teammate Emily worked closely together to plan and implement our fully functional web app, allowing our admin, students, and volunteers seamless communication. In her free time Ari is a foodie and adventure seeker who loves to spend time outdoors and with family and friends.</p>
                         <div class='social-icons'>
                             <a href="https://github.com/arianahabas" target="_blank"><img
                                     src="assets/GitHub-Mark-32px.png"></a>
@@ -112,10 +105,7 @@
                                 alt="Emily Low">
                             <figcaption>Emily Low<br>Front End Developer<figcaption>
                         </figure>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt, ratione ut a minima nemo
-                            odit
-                            natus quas vel minus modi assumenda quis, omnis quos aut eius aliquam quibusdam consequuntur
-                            beatae.</p>
+                        <p>Emily functions as a Front End Framework Developer at <span class="in-text-logo" style="white-space: nowrap;"><img src="assets/up-24.png" class="in-text" alt="logo up arrow">upGrade</span><span class="in-text-logo"> Tutors</span>. She and teammate Ari worked closely together to plan and implement our fully functional web app, allowing our admin, students, and volunteers seamless communication. </p>
                         <div class='social-icons'>
                             <a href="https://github.com/EmilyLow" target="_blank"><img
                                     src="assets/GitHub-Mark-32px.png"></a>
@@ -128,12 +118,7 @@
                                 alt="Aric Repp">
                             <figcaption>Aric Repp<br>Back End Developer<figcaption>
                         </figure>
-                        <p>The wild west of the Internet can be quite an undertaking. My fascination with it has held my
-                            attention for many years. As an aspiring React Software Engineer I seek the new and unknown.
-                            I
-                            enjoy learning and strive for knowledge, but my passions aren't so one sided. I am a father,
-                            an
-                            avid traveler, foodie, gamer, and collector of dad jokes. </p>
+                        <p>Aric functions as the Back End Developer for <span class="in-text-logo" style="white-space: nowrap;"><img src="assets/up-24.png" class="in-text" alt="logo up arrow">upGrade</span><span class="in-text-logo"> Tutors</span>. In his role he built out the API using the REST architectural pattern, providing the endpoints for the Front End Developers on our team. Aric can be summed up best with his quote "Tech dad is my name, problem solving is the game." </p>
                         <div class='social-icons'>
                             <a href="https://github.com/aricrepp" target="_blank"><img
                                     src="assets/GitHub-Mark-32px.png"></a>
@@ -147,9 +132,7 @@
                                 width="200px" alt="Gina Russell">
                             <figcaption>Gina Russell<br>UI Developer<figcaption>
                         </figure>
-                        <p>I am an insatiably curious enthusiastic learner, a collaborative team player, and driven to
-                            excellence. I have 10+ years experience in education, learning to learn, and teaching others. I am a full-stack web
-                            developer with a current interest in front end development.</p>
+                        <p>Gina functions as the UI Developer for <span class="in-text-logo" style="white-space: nowrap;"><img src="assets/up-24.png" class="in-text" alt="logo up arrow">upGrade</span><span class="in-text-logo"> Tutors</span>. She designed and built our fully responsive, multi-page marketing site including our landing, Partner with Us, and Contact pages.</p>
                         <div class='social-icons'>
                             <a href="https://github.com/ginabethrussell" target="_blank"><img
                                     src="assets/GitHub-Mark-32px.png"></a>
