--- a/contact.html
+++ b/contact.html
@@ -107,12 +107,18 @@
                         <div class="role item">
                             <!-- Choose volunteer, tutor, or partner -->
                             <h3 class="type">Choose your role below: </h3>
-                            <input type="radio" name="type" id="volunteer" value="volunteer">
-                            <label for="volunteer">Volunteer</label>
-                            <input type="radio" name="type" id="student" value="student">
-                            <label for="student">Student</label>
-                            <input type="radio" name="type" id="sponsor" value="sponsor">
-                            <label for="sponsor">Sponsor</label>
+                            <div class="radio">
+                                <input type="radio" name="type" id="volunteer" value="volunteer">
+                                <label for="volunteer">Volunteer</label>
+                            </div>
+                            <div class="radio">
+                                <input type="radio" name="type" id="student" value="student">
+                                <label for="student">Student</label>
+                            </div>
+                            <div class="radio">
+                                <input type="radio" name="type" id="sponsor" value="sponsor">
+                                <label for="sponsor">Sponsor</label>
+                            </div>
                         </div>
                     </div>
                     <div class="form-group">
